--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ repositories {
 }
 
 dependencies {
-    implementation (group: 'io.javalin', name: 'javalin', version: '3.13.10')
+    implementation group: 'io.javalin', name: 'javalin', version: '4.1.1'
     implementation 'com.github.jkcclemens:khttp:0.1.0'
     testImplementation 'junit:junit:4.13.2'
 }
